2616 [HD Streams Extractor] improved feature selection
2615 [AVS Script Creator]   improved "Analyse" handling
2614 [L-SMASH Indexer]      do not expect a cache file for LSMASH*Source()
2613 [Update]               do not delete NeroAacEnc during eac3to update
2612 [AVS Script Creator]   fixed "Analyse" function (regression of 2611)
2611 [AVS Script Creator]   fixed value range for cycleR in TDecimate()
2610                        fixed not able to open AVS scripts in some use cases (regression of 2607)
2609                        removed the DPI aware flag (requires Windows Vista+)
                            The application will now look blurry when not using 100% DPI but all controls are visible
2608 [QAAC]                 fixed a crash when the settings have to be recreated (regression of 2604)
2607                        reduced number of required AviSynth script accesses
2606 [MediaInfo]            reduced log messages if the language information is emtpy
2605 [Update]               fixed not using the proper package disable date from the server configuration (regression of 2523)
2604 [QAAC]                 do not delete portable runtime files during an update if they are in the QTfiles subdirectory
2603 [AudioEncoder]         fixed FFAudioSource. part II (regression of 2591)
2602 [AudioEncoder]         fixed FFAudioSource (regression of 2591)
2601 [OneClick]             fixed DAR button behaviour
2600                        obsolete packages and log files will only be deleted if the backup option is disabled
2599 [Profile]              fixed unsaved selected profile (regression of 2590)
2598 [Log]                  delete log files after 90 days
2597 [QAAC]                 do not delete portable dll files during update
2596 [DGIndexIM/NV]         improved error handling
2595 [DGIndexIM/NV]         fixed crash when the indexer directory is not available (regression of 2585)
2594 [Update]               fixed update installation detection (regression of 2586)